--- a/Frontend/review/review.html
+++ b/Frontend/review/review.html
@@ -4,138 +4,156 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Samnwadh - User Reviews</title>
 
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Samnwadh</title>
-    <link rel="stylesheet" href="../mainpage/style.css" />
-    <link rel="stylesheet" href="../toggle/toggle.css" />
-    <link rel="stylesheet" href="./review.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" />
-  </head>
+  <!-- Stylesheets -->
+  <link rel="stylesheet" href="../CSS/navbar.css" />
+  <link rel="stylesheet" href="../CSS/footer.css">
+  <link rel="stylesheet" href="../toggle/toggle.css" />
+  <link rel="stylesheet" href="./review.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" />
+</head>
 
 <body>
-  <header class="bg-blue-600 text-white p-6">
+
+  <!-- Navbar and Heading -->
+  <header class="header">
     <div class="container">
-      <div class="menu-toggle" id="menu-toggle">&#9776;</div>
-
-      <a href="../index.html"><img src="../images/logo.webp" alt="Samnwadh" /></a>
-
-      <nav class="navbar" id="navbar">
+      <!-- Logo Section -->
+      <a href="../index.html" class="logo-link">
+        <img src="../images/logo.webp" alt="Samnwadh Logo" class="logo" />
+      </a>
+  
+      <!-- Hamburger Menu for Mobile -->
+      <button id="menu-toggle" class="menu-toggle" aria-label="Toggle menu">
+        ☰
+      </button>
+  
+      <!-- Navigation -->
+      <nav class="navbar">
         <ul class="nav-links">
           <li><a href="../index.html">Features</a></li>
           <li><a href="../tech-stack/techstack.html">Tech Stack</a></li>
           <li><a href="../contributor/contributor.html">Contribute</a></li>
           <li><a href="../community/community.html">Community</a></li>
           <li><a href="../review/review.html">Review</a></li>
-          <li><a href="../login/login.html">Login</a></li>
+          <li><a href="../login/login.html" id="auth-link">Login</a></li>
+          <li><a href="../profile/user.html">Profile</a></li>
         </ul>
-        <button type="button" id="darkModeToggle" class="toggle">
+  
+        <!-- Dark Mode Toggle -->
+        <button type="button" id="darkModeToggle" class="dark-mode-toggle" aria-label="Toggle dark mode">
           <span class="icon sun">☀️</span>
-          <span class="icon moon">🌙</span>
+          <span class="icon moon hidden">🌙</span>
         </button>
       </nav>
     </div>
+  
+    <!-- Mobile Menu (Hidden by Default) -->
+    <!-- <div class="mobile-menu" id="mobile-menu">
+      <ul class="mobile-nav-links">
+        <li><a href="#features">Features</a></li>
+        <li><a href="./tech-stack/techstack.html">Tech Stack</a></li>
+        <li><a href="./contributor/contributor.html">Contribute</a></li>
+        <li><a href="./community/community.html">Community</a></li>
+        <li><a href="./review/review.html">Review</a></li>
+        <li><a href="./login/login.html" id="auth-link-mobile">Login</a></li>
+        <li><a href="./profile/user.html">Profile</a></li>
+      </ul>
+    </div> -->
   </header>
 
-  <div class="testimonial-section">
+  <!-- Testimonials Section -->
+  <section class="testimonial-section">
     <h2>What Our Users Say</h2>
-    <div class="testimonials">
-      <div class="testimonial">
+
+    <div class="testimonials grid gap-8">
+      <!-- Testimonial Card Component -->
+      <div class="testimonial" data-aos="fade-up">
         <img src="https://i.pravatar.cc/80?img=8" alt="Emma R." class="profile-img" />
-        <p>
-          "An incredible place to collaborate on projects! The community is so
-          supportive."
-        </p>
-        <div class="stars">⭐⭐⭐⭐⭐</div>
+        <p>"An incredible place to collaborate on projects! The community is so supportive."</p>
+        <div class="stars" aria-hidden="true">⭐⭐⭐⭐⭐</div>
         <h4>- Emma R.</h4>
       </div>
 
-      <div class="testimonial">
+      <div class="testimonial" data-aos="fade-up" data-aos-delay="100">
         <img src="https://i.pravatar.cc/80?img=16" alt="David P." class="profile-img" />
-        <p>
-          "The mentorship and guidance here have been a game changer for my
-          career."
-        </p>
-        <div class="stars">⭐⭐⭐⭐⭐</div>
+        <p>"The mentorship and guidance here have been a game changer for my career."</p>
+        <div class="stars" aria-hidden="true">⭐⭐⭐⭐⭐</div>
         <h4>- David P.</h4>
       </div>
 
-      <div class="testimonial">
+      <div class="testimonial" data-aos="fade-up" data-aos-delay="200">
         <img src="https://i.pravatar.cc/80?img=23" alt="Sophia L." class="profile-img" />
-        <p>
-          "Fantastic platform for developers! Learning new technologies has
-          never been this easy."
-        </p>
-        <div class="stars">⭐⭐⭐⭐</div>
+        <p>"Fantastic platform for developers! Learning new technologies has never been this easy."</p>
+        <div class="stars" aria-hidden="true">⭐⭐⭐⭐</div>
         <h4>- Sophia L.</h4>
       </div>
 
-      <div class="testimonial">
+      <div class="testimonial" data-aos="fade-up" data-aos-delay="300">
         <img src="https://i.pravatar.cc/80?img=30" alt="James K." class="profile-img" />
-        <p>
-          "Great for networking and finding like-minded developers. Highly
-          recommended!"
-        </p>
-        <div class="stars">⭐⭐⭐⭐⭐</div>
+        <p>"Great for networking and finding like-minded developers. Highly recommended!"</p>
+        <div class="stars" aria-hidden="true">⭐⭐⭐⭐⭐</div>
         <h4>- James K.</h4>
       </div>
     </div>
-  </div>
+  </section>
 
-  <!-- footer section -->
+  <!-- Footer section -->
   <footer class="bg-blue-600 text-white py-8">
-    <div class="footer-container">
-      <div class="newsletter">
-        <h3>Subscribe to our Newsletter</h3>
-        <form id="subscribeForm">
-          <input type="email" id="emailInput" placeholder="Enter your email" required />
-          <button class="submit" type="submit">Subscribe</button>
+    <div class="footer-container max-w-7xl mx-auto px-4">
+      <div class="newsletter mb-8">
+        <h3 class="text-2xl font-semibold mb-4">Subscribe to our Newsletter</h3>
+        <form id="subscribeForm" class="flex flex-col md:flex-row items-center gap-4">
+          <input type="email" id="emailInput" placeholder="Enter your email" required
+            class="px-4 py-2 rounded-md w-full md:w-80 text-black focus:outline-none focus:ring-2 focus:ring-blue-400" />
+          <button
+            class="submit py-2 px-6 bg-white text-blue-600 rounded-md hover:bg-gray-100 focus:ring-2 focus:ring-blue-400"
+            type="submit" onclick="subscribeAlert()">Subscribe</button>
         </form>
       </div>
-      <div class="footerLinksForAdminInfo">
+  
+      <div class="footerLinksForAdminInfo text-sm mb-8">
         <p>📍 Location: xyz, India</p>
-        <p>📞 Phone: <a href="tel:+919876543210">+91 99999 99990</a></p>
-        <p>
-          📧 Email:
-          <a href="mailto:your-email@example.com">your-email@example.com</a>
+        <p>📞 Phone: <a href="tel:+919876543210" class="text-white hover:underline">+91 99999 99990</a></p>
+        <p>📧 Email: <a href="mailto:your-email@example.com" class="text-white hover:underline">your-email@example.com</a>
         </p>
       </div>
-      <!-- Footer Links (Right Side) -->
-      <div class="bottom-footer">
-        <div class="footer-links">
-          <a href="../about/about.html" class="text-white hover:underline">About Us</a>
-          <a href="../contact/contact.html" class="text-white hover:underline">Contact Us</a>
-          <a href="../review/review.html" class="text-white hover:underline">Review</a>
-          <a href="../faq/faq.html" class="text-white hover:underline">FAQ</a>
-          <a href="../feedback/feedback.html" class="text-white hover:underline">Feedback</a>
-          <a href="../terms/terms.html" class="text-white hover:underline">Terms & Conditions</a>
-          <a href="../blog/blog.html" class="text-white hover:underline"> Blog </a>
-          <a href="../privacy/privacy.html" class="text-white hover:underline">Privacy Policy</a>
-          <a href="../terms/terms.html" class="text-white hover:underline">Terms & Conditions</a>
-        </div>
-      </div>
     </div>
-
-    <!-- Social Links & Copyright (Centered at Bottom) -->
-    <div class="bottom-footer">
-      <p>&copy; 2025 Samnwadh. All rights reserved.</p>
-      <div class="social-links">
-        <a href="https://github.com/ak-0283"><i class="fab fa-github"></i></a>
-        <a href="https://discord.com/users/762235277263241236"><i class="fa-brands fa-discord"></i></a>
-        <a href="https://x.com/AK_2805"><i class="fa-brands fa-x-twitter"></i></a>
-        <a href="https://www.linkedin.com/in/abhay-kumar-117b4327b/"><i class="fa-brands fa-linkedin"></i></a>
+  
+    <div class="bottom-footer text-center">
+      <div class="footer-links mb-4">
+        <a href="./about/about.html" class="text-white hover:underline mx-3">About Us</a>
+        <a href="./contact/contact.html" class="text-white hover:underline mx-3">Contact Us</a>
+        <a href="./review/review.html" class="text-white hover:underline mx-3">Review</a>
+        <a href="./faq/faq.html" class="text-white hover:underline mx-3">FAQ</a>
+        <a href="./feedback/feedback.html" class="text-white hover:underline mx-3">Feedback</a>
+        <a href="./community/community.html" class="text-white hover:underline mx-3">Community</a>
+        <a href="./terms/terms.html" class="text-white hover:underline mx-3">Terms & Conditions</a>
+        <a href="./blog/blog.html" class="text-white hover:underline mx-3">Blog</a>
+        <a href="./privacy/privacy.html" class="text-white hover:underline mx-3">Privacy Policy</a>
+      </div>
+  
+      <p class="text-sm mt-4">© 2025 Samnwadh. All rights reserved.</p>
+  
+      <div class="social-links mt-4">
+        <a href="https://github.com/ak-0283" class="text-white hover:text-gray-400 mx-3"><i class="fab fa-github"></i></a>
+        <a href="https://discord.com/users/762235277263241236" class="text-white hover:text-gray-400 mx-3"><i
+            class="fab fa-discord"></i></a>
+        <a href="https://x.com/AK_2805" class="text-white hover:text-gray-400 mx-3"><i class="fab fa-x-twitter"></i></a>
+        <a href="https://www.linkedin.com/in/abhay-kumar-117b4327b/" class="text-white hover:text-gray-400 mx-3"><i
+            class="fab fa-linkedin"></i></a>
       </div>
     </div>
   </footer>
 
+  <!-- Scripts -->
   <script src="../mainpage/script.js"></script>
   <script src="../toggle/toggle.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
   <script>
-    AOS.init({ duration: 600, once: false });
+    AOS.init({ duration: 600, once: true });
   </script>
 </body>
 
