--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -74,7 +74,7 @@
             style="margin: 18px"
         /></a>
 
-        <nav class="navbar" >
+        <nav class="navbar">
           <ul class="nav-links">
             <li><a href="#features">Features</a></li>
             <li><a href="techstack.html">Tech Stack</a></li>
@@ -219,7 +219,7 @@
       <h2 data-aos="fade-up" class="text-2xl font-bold text-center mb-8">
         Frequently Asked Questions
       </h2>
-      <p id="no-results" style="display: none; color: red;">No results found</p>
+      <p id="no-results" style="display: none; color: red">No results found</p>
       <div data-aos="fade-up" class="faq-container">
         <div data-aos="fade-up" class="faq-item">
           <h1 data-aos="fade-up" class="question" onclick="toggleAnswer(this)">
@@ -312,7 +312,7 @@
               placeholder="Enter your email"
               required
             />
-            <button class="submit" type="submit" onclick="{subscribeAlert()}">
+            <button class="submit" type="submit" onclick="{subscribeAlert()}"> <!-- subscription message pop up -->
               Subscribe
             </button>
           </form>
@@ -423,37 +423,36 @@
       AOS.init({ duration: 600, once: false });
     </script>
     <script>
-      function subscribeAlert() {
-        alert("Thank you for subscribing to our newsletter!");
-      }
+      // subscicption alert for news letter
+      const subscribeAlert = () => alert("Thank you for subscribing to our newsletter!");
+
       function toggleAnswer(element) {
         let answer = element.nextElementSibling;
         answer.style.display =
           answer.style.display === "block" ? "none" : "block";
       }
       function searchFAQ() {
-  let input = document.querySelector(".search-box").value.toLowerCase();
-  let questions = document.querySelectorAll(".faq-item");
-  let answers = document.querySelectorAll(".faq-answer"); // Get all answers
-  let noResults = document.getElementById("no-results");
-  let found = false;
+        let input = document.querySelector(".search-box").value.toLowerCase();
+        let questions = document.querySelectorAll(".faq-item");
+        let answers = document.querySelectorAll(".faq-answer"); // Get all answers
+        let noResults = document.getElementById("no-results");
+        let found = false;
 
-  questions.forEach((item, index) => {
-    let text = item.textContent.toLowerCase();
-    if (text.includes(input)) {
-      item.style.display = "block";
-      answers[index].style.display = "none"; // Hide answers on search
-      found = true;
-    } else {
-      item.style.display = "none";
-      answers[index].style.display = "none"; // Hide answers for unmatched items
-    }
-  });
+        questions.forEach((item, index) => {
+          let text = item.textContent.toLowerCase();
+          if (text.includes(input)) {
+            item.style.display = "block";
+            answers[index].style.display = "none"; // Hide answers on search
+            found = true;
+          } else {
+            item.style.display = "none";
+            answers[index].style.display = "none"; // Hide answers for unmatched items
+          }
+        });
 
-  // Show "No results found" if nothing is found
-  noResults.style.display = found ? "none" : "block";
-}
-
+        // Show "No results found" if nothing is found
+        noResults.style.display = found ? "none" : "block";
+      }
     </script>
   </body>
 </html>
