--- a/Frontend/contact/contact.html
+++ b/Frontend/contact/contact.html
@@ -65,6 +65,28 @@
 
         <div id="result"></div>
       </form>
+      <div class="social-media">
+        <div>
+          <h1 style="font-size: 1rem; text-align: center">Connect with us on Social Media</h1>
+          <div class="social-media">
+            <a href="https://www.facebook.com" target="_blank"
+              ><i class="fab fa-facebook"></i
+            ></a>
+            <a href="https://www.twitter.com" target="_blank"
+              ><i class="fab fa-twitter"></i
+            ></a>
+            <a href="https://www.instagram.com" target="_blank"
+              ><i class="fab fa-instagram"></i
+            ></a>
+            <a href="https://www.linkedin.com" target="_blank"
+              ><i class="fab fa-linkedin"></i
+            ></a>
+            <a href="https://www.pinterest.com" target="_blank"
+              ><i class="fab fa-pinterest"></i
+            ></a>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
     <script src="../web3.js"></script>
