hamburger button works on community page

--- a/Frontend/community/community.html
+++ b/Frontend/community/community.html
@@ -190,6 +190,9 @@
         }
       }
     }
+    document.getElementById('menu-toggle').addEventListener('click', function () {
+      document.querySelector('.navbar').classList.toggle('active');
+    });
   </script>
 </body>
 
