--- a/Frontend/about/about.html
+++ b/Frontend/about/about.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../mainpage/style.css" />
     <link rel="stylesheet" href="./about.css" />
     <link rel="stylesheet" href="../toggle/toggle.css" />
+    <link rel="stylesheet" href="../CSS/footer.css">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -113,7 +114,7 @@
         </div>
         <!-- Footer Links (Right Side) -->
         <div class="footer-links">
-          <a href="./about.html" class="text-white hover:underline">About Us</a>
+          <a href="../about/about.html" class="text-white hover:underline">About Us</a>
           <a href="../contact/contact.html" class="text-white hover:underline"
             >Contact Us</a
           >
