--- a/Frontend/feedback/feedback.html
+++ b/Frontend/feedback/feedback.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Feedback</title>
     <link rel="stylesheet" href="../feedback/feedback.css" />
-    <link rel="stylesheet" href="../CSS/navbar.css" />
-    <link rel="stylesheet" href="../CSS/footer.css">
+    <link rel="stylesheet" href="../mainpage/style.css" />
     <link rel="stylesheet" href="../toggle/toggle.css" />
 
     <link
