--- a/Frontend/tech-stack/techstack.html
+++ b/Frontend/tech-stack/techstack.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tech Stack</title>
-    <link rel="stylesheet" href="../CSS/navbar.css" />
-    <link rel="stylesheet" href="../CSS/footer.css">
+    <link rel="stylesheet" href="../mainpage/style.css" />
     <link rel="stylesheet" href="../tech-stack/tech-stack.css" />
     <link rel="stylesheet" href="../toggle/toggle.css" />
     <link
@@ -37,7 +36,7 @@
             <li><a href="../review/review.html">Review</a></li>
             <li><a href="../login/login.html" id="auth-link">Login</a></li>
           </ul>
-          <button type="button" id="darkModeToggle" class="dark-mode-toggle">
+          <button type="button" id="darkModeToggle" class="toggle">
             <span class="icon sun">☀️</span>
             <span class="icon moon">🌙</span>
           </button>
