Fixed terms container and twice terms links in review page

--- a/Frontend/review/review.html
+++ b/Frontend/review/review.html
@@ -111,7 +111,7 @@
           <a href="../review/review.html" class="text-white hover:underline">Review</a>
           <a href="../faq/faq.html" class="text-white hover:underline">FAQ</a>
           <a href="../feedback/feedback.html" class="text-white hover:underline">Feedback</a>
-          <a href="../terms/terms.html" class="text-white hover:underline">Terms & Conditions</a>
+          <!-- <a href="../terms/terms.html" class="text-white hover:underline">Terms & Conditions</a> -->
           <a href="../blog/blog.html" class="text-white hover:underline"> Blog </a>
           <a href="../privacy/privacy.html" class="text-white hover:underline">Privacy Policy</a>
           <a href="../terms/terms.html" class="text-white hover:underline">Terms & Conditions</a>
