--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -460,5 +460,11 @@
         noResults.style.display = found ? "none" : "block";
       }
     </script>
+    <script>
+      document.getElementById('menu-toggle').addEventListener('click',()=>{
+        console.log('clicked')
+        document.querySelector('.navbar').classList.toggle('active')
+      })
+    </script>
   </body>
 </html>
