--- a/Frontend/feedback/feedback.html
+++ b/Frontend/feedback/feedback.html
@@ -16,7 +16,7 @@
   <body>
     <!-- Navbar -->
     <nav class="navbar">
-      <button class="back-button" onclick="window.location.href = '../index.html'">
+      <button class="back-button" onclick="history.back()">
         <i class="fa-solid fa-arrow-left fa-xl"></i>
       </button>
       <button type="button" id="darkModeToggle" class="toggle">
