--- a/Frontend/login/login.html
+++ b/Frontend/login/login.html
@@ -11,7 +11,7 @@
 
     <!-- Navbar -->
     <nav class="navbar">
-        <button class="back-button" onclick="window.location.href = '../index.html'">
+        <button class="back-button" onclick="history.back()">
             <i class="fa-solid fa-arrow-left fa-xl"></i>
         </button>
         <button type="button" id="darkModeToggle" class="toggle">
