--- a/Frontend/report/report.html
+++ b/Frontend/report/report.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <div class="container">
+        <button id="toggleTheme" class="toggle-btn">🌙</button>
+
         <form action="">
             <h1>Report an issue</h1>
             <label for="">
@@ -32,4 +34,22 @@
         </form>
     </div>
 </body>
+<script>
+    if (toggleTheme) {
+toggleTheme.addEventListener("click", function () {
+    document.body.classList.toggle("dark-mode");
+
+    // Save theme preference
+    const isDarkMode = document.body.classList.contains("dark-mode");
+    toggleTheme.textContent = isDarkMode ? "☀️" : "🌙";
+    localStorage.setItem("theme", isDarkMode ? "dark" : "light");
+});
+
+// Load theme preference on page load
+if (localStorage.getItem("theme") === "dark") {
+    document.body.classList.add("dark-mode");
+    toggleTheme.textContent = "☀️";
+}
+}
+</script>
 </html>
