--- a/Frontend/about/about.html
+++ b/Frontend/about/about.html
@@ -29,13 +29,13 @@
       <!-- Navigation -->
       <nav class="navbar">
         <ul class="nav-links">
-          <li><a href="#features">Features</a></li>
-          <li><a href="./tech-stack/techstack.html">Tech Stack</a></li>
-          <li><a href="./contributor/contributor.html">Contribute</a></li>
-          <li><a href="./community/community.html">Community</a></li>
-          <li><a href="./review/review.html">Review</a></li>
-          <li><a href="./login/login.html" id="auth-link">Login</a></li>
-          <li><a href="./profile/user.html">Profile</a></li>
+          <li><a href="../index.html#features">Features</a></li>
+          <li><a href="../tech-stack/techstack.html">Tech Stack</a></li>
+          <li><a href="../contributor/contributor.html">Contribute</a></li>
+          <li><a href="../community/community.html">Community</a></li>
+          <li><a href="../review/review.html">Review</a></li>
+          <li><a href="../login/login.html" id="auth-link">Login</a></li>
+          <li><a href="../profile/user.html">Profile</a></li>
         </ul>
   
         <!-- Dark Mode Toggle -->
